# xidlehook

./: Cargo.toml
xidlehook-core/: Cargo.toml
xidlehook-daemon/: Cargo.toml
