[workspace]
members = ["xidlehook-daemon", "xidlehook-core"]

[patch.crates-io]
xidlehook-core = { path = "xidlehook-core" }

[package.metadata.deb]
name = "xidlehook"
maintainer = "jD91mZM2"
extended-description = """\
xidlehook is a general-purpose replacement for xautolock.
It executes a command when the computer has been idle for a specified amount of time.
"""
license-file = ["LICENSE", "MIT"]
depends = "$auto, ,libxcb1, libpulse0"
section = "utils"
priority = "optional"